# canny-edge-detector

./: CMakeLists.txt  README.md  canny.cpp  canny.h  main.cpp
.cache/clangd/index/: canny.cpp.AA721601AA283B80.idx  canny.cpp.D500B8E468694A8E.idx  canny.h.534EEEF919DA442B.idx  canny.h.F40DC514CF56514B.idx  main.cpp.113F008C4B8A7427.idx  main.cpp.1A37DC8B9B47AB41.idx
